# Albius

./: .buildconfig  .gitignore  Makefile  README.md  RECIPE.md  albius.go  ffi_types.h  go.mod  go.sum  meson.build  recipe_templace.json  recipe_template.json
.github/workflows/: deb-build.yml  go.yml
albius/: converters.go  disk.go  disk_ops.go  file_ops.go  meson.build  mod.go  partition.go  partitioning.go  util.go
albius/lib/: ffi_funcs.c  ffi_funcs.h  ffi_types.h  meson.build
core/: disk.go  file_ops.go  filesystem.go  grub.go  luks.go  lvm.go  lvm_test.go  partition.go  post_install.go  recipe.go  recipe_test.go  util.go
core/disk/: disk.go  disk_test.go  filesystem.go  partition.go
core/disk/luks/: luks.go
core/lvm/: lv.go  lvm.go  lvm_cgo.c  lvm_cgo.h  lvm_test.go  pv.go  vg.go
core/system/: grub.go  post_install.go
core/util/: util.go
debian/: changelog  control  copyright  files  rules
ffi/: converters.go  disk_ops.go  util.go
native/: disk.go
python_bindings/: main.py  meson.build
python_bindings/ffi/: __init__.py  exports.py
python_bindings/lib/: __init__.py
python_bindings/lib/ffi/: __init__.py  disk.py  exports.py  utils.py
python_bindings/testing/: test.py
python_ffi/: __init__.py  main.py
python_ffi/ffi/: disk.py  exports.py  utils.py
tests/: create_test_env.sh  lvm_test.go
utils/: create_test_device.sh  create_test_env.sh  generate_recipe_doc  generate_recipe_doc.py  remove_test_device.sh  sample_recipe.json
